--- a/test2.css
+++ b/test2.css
@@ -494,7 +494,7 @@ body {
 }
 
 .quiz-image {
-    max-width: 100%;
+    /* max-width: 100%; */
     height: 65vh;
     object-fit: contain;
     border-radius: 10px;
